Big button is fully working with Firefox. With IE 7 there is a bug, z-index doesn't work a transparent button is covering text "Quick Local Synchro".
git-svn-id: http://piwigo.org/svn/trunk@2552 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/admin/template/goto/default-layout.css
+++ b/admin/template/goto/default-layout.css
@@ -530,4 +530,4 @@ LEGEND.tagLetterLegend {
 TABLE.tagLetterContent {
   width:100%;
   font-size:80%;
-  border-collapse : collapse;
+  border-collapse : collapse; }
